# laptopfinder

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  TASKS.md  debug_watchlist.html  deep_plan_config.json  handover.md  perplexity-research-report.md  pwm_skill.md  pyproject.toml  split_clean.py  split_hunter.py  telemetry_summary.md  vmstat-log-2b-20260701-053955.txt  vmstat-log-9b-20260701-054119.txt
.agents/: skills.json
.claude/: settings.json
.codex/: hooks.json
.gemini/: hooks.json
config/: agent_hooks.json  scoring_weights.yaml  silicon_profiles.yaml  static_reference_layer.json  static_scoring_rules.json
data/: hardware_taxonomy.json  lf-vendor-risk.json  seen_sniper_items.json  shortlist_value.jsonl  shortlist_value.md  urls.txt
docs/: README.md  ebay_sniper.md  handover.md  pwm_council_concepts.md  pwm_deep_research.md  pwm_labs_workflows.md  pwm_local_scripts.md  pwm_workflow_catalog.md
memory/: MEMORY.md
output/: targeted_laptopfinder_pack.xml
planning/: claude-interview.md  claude-plan.md  claude_handover_prompt.md  claude_session_handover_pvm_audit.md  deep_plan_config.json  ebay-api-discovery-ideas.md  laptopfinder-ebay-sniper-deep-plan.md  pvm_mcp_execution_audit.md  sniper_simplification_plan.md
prompts/: ai_studio_runtime.txt  alternative_silicon_gemini.txt  alternative_silicon_perplexity.txt  bias_guard_prompt.md  claude_code_audit.txt  claude_cowork_benchmark_scraper.txt  claude_evidence_analyzer.txt  comet_discovery_agent.txt  gemini_deep_research.txt  gemini_evidence_parser.txt  gemini_research_report.md  (+8 more)
(+361 files in other folders)
