[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laptopfinder"
version = "0.1.0"
description = "laptopfinder thin-slice Stage 1 / Stage 2 fixture harness"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
    "google-genai>=0.3.0",
    "anthropic>=0.20.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "firecrawl-py~=4.31",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"laptopfinder.schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
